--- a/gallery/package.json
+++ b/gallery/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angular2-flash-messages": "^2.0.5",
     "core-js": "^2.4.1",
     "ngx-webstorage": "^2.0.1",
+    "primeng": "^5.0.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
