--- a/gallery/package.json
+++ b/gallery/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.0.0",
     "angular2-flash-messages": "^2.0.5",
     "core-js": "^2.4.1",
+    "ng2-dnd": "^5.0.2",
     "ngx-webstorage": "^2.0.1",
     "primeng": "^5.0.2",
     "rxjs": "^5.5.2",
