--- a/gallery/package.json
+++ b/gallery/package.json
@@ -22,8 +22,12 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "angular2-flash-messages": "^2.0.5",
+    "bootstrap": "^4.0.0-beta.3",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
     "ng2-dnd": "^5.0.2",
+    "ng2-image-lazy-load": "^2.0.9",
+    "ngx-bootstrap": "^2.0.0-rc.0",
     "ngx-webstorage": "^2.0.1",
     "primeng": "^5.0.2",
     "rxjs": "^5.5.2",
